# sbc-auth

./: .gitignore  .sonarcloud.properties  CODE_OF_CONDUCT.md  COMPLIANCE.yaml  CONTRIBUTING.md  README.md  codecov.yaml  dc.sh  package-lock.json  renovate.json  setenv_1pass.sh  setenv_deploy.sh  setenv_secret.sh
auth-api/: .env copy  Dockerfile  Jenkinsfile  Jenkinsfile-post-mvp  Jenkinsfile.pipeline.param  MANIFEST.in  Makefile  README.md  __init__.py  code-review-checklist.md  config.py  docker-entrypoint.sh  env  env.sample  flags.json  gunicorn_config.py  lint  logging.conf  manage.py  myproject.py  package-lock.json  pre-hook-update-db.sh  pre_hook_create_database.py  pyproject.toml  pytest.xml  requirements.txt  setup.cfg  setup.py  update_db.sh  update_poetry_dependencies.sh  wsgi.py
auth-api/.pipeline/: pytest.groovy
auth-api/devops/: vaults.gcp.env  vaults.json
auth-api/devops/gcp/: clouddeploy.yaml
auth-api/devops/gcs-bucket-cors/: apply-cors.sh  gcs-auth-accounts-dev-cors.json  gcs-auth-accounts-prod-cors.json  gcs-auth-accounts-sandbox-cors.json  gcs-auth-accounts-test-cors.json  gcs-auth-static-resources-dev-cors.json  gcs-auth-static-resources-prod-cors.json  gcs-auth-static-resources-test-cors.json
auth-api/devops/monitoring/: create-log-metrics.sh
auth-api/docs/: affiliation_contracts.txt  contract.yaml  dotenv_template  entity_contracts.txt  org_contracts.txt  user_contracts.txt
auth-api/email_templates/: admin_notification_email.html  business_invitation_email.html  business_invitation_email_for_bceid.html  dirsearch_business_invitation_email.html  govm_business_invitation_email.html  govm_member_invitation_email.html  membership_approved_notification_email.html  membership_approved_notification_email_for_bceid.html  nonbcsc_org_approved_notification_email.html  nonbcsc_org_rejected_notification_email.html  otp_authenticator_reset_notification_email.html  role_changed_notification_email.html  staff_review_account_email.html
auth-api/jenkins/: dev-post.groovy  dev.groovy  prod.groovy  staging.groovy  test.groovy
auth-api/migrations/: README  alembic.ini  env.py
auth-api/migrations/versions/: 031a07fb0811_add_account_id_column_in_tasks_table.py  032248a1b370_create_statement_permissions.py  06a6dac9fc82_removing_non_null_constraints_on_entity.py  06c7acc047fa_remove_payment_type_from_authorisation.py  06d35ac29076_added_display_name_column.py  06eda339e0d5_payment_settings_changes.py  08063ceec05d_add_term_of_use_for_director_search.py  087b355d59eb_productsubscriptionsstatus_added.py  08e1d49dfa1a_business_type_and_size.py  09c44f82c03c_add_folio_number_to_entity_table.py  09dd4ea64775_verified_user.py  0ab62b841b88_add_drawdown_payment_type.py  0bf25945e757_update_broken_link_tos.py  0f310e71e51d_affidavit_pending_status_permissions.py  0f934590ef1d_change_entity_column_type.py  129eb4978d07_org_api_access.py  1344cb533815_.py  1786b8de5f43_added_director_search_role.py  18a4955730f9_migrating_for_prod.py  19a7733fd001_merge_heads.py  19ffc2fcc88c_keycloak_guid_made_nullable.py  1a46fdc4d630_permissons_for_activity_log.py  1c958b749a20_org_status_added_to_authorisation_view.py  1f64b1786ecc_create_user_table.py  2023_03_22_501d1179b2f0_.py  2023_03_25_501d1179b2f0_.py  2023_03_25_b8dc42f28583_.py  2023_03_26_6fdb1aeed68d_.py  2023_03_26_b8dc42f28583_.py  2023_07_04_d53a79e9cc89_add_uuid_column_to_orgs_table.py  2023_07_12_13121bcf368a_affilation_invitations.py  2023_07_24_b20a33cb84f2_mhr_qualified_supplier.py  2023_07_26_27d53abf3f48_add_additional_message_column_to_the_.py  2023_08_01_ba5fafee24c1_.py  2023_08_03_746771099983_add_nds_product_code.py  2023_08_08_18823fc88aac_update_product_codes.py  2023_08_08_628b52a95bad_affiliation_invitations_to_org_nullable.py  2023_08_15_98bee9969323_17243_mhr_qs_product_code_update.py  2023_09_05_1ddf3b37e17f_.py  2023_09_20_4a6eb0fcc93e_affiliation_invitation_deleted_flag.py  (+219 more)
auth-api/openshift/: auth-api-build.param
auth-api/openshift/templates/: auth-api-build.json  auth-api-deploy.e2e.json  auth-api-deploy.json  auth-api-pipeline.json  auth-api-pre-deploy.json  auth-api-service.json  auth-api-test-deploy.json  auth-db.yaml  bc.yaml  dc.json  dc.yaml  dockerfile-jenkins-slave-python3  keycloak.yaml  pipeline.yaml  postgresql-deploy.json  postgresql-test-deploy.json
auth-api/requirements/: dev.txt  editable.txt  prod.txt  repo-libraries.txt
auth-api/src/: __init__.py
auth-api/src/auth_api/: __init__.py  auth.py  config.py  jwt_wrapper.py  logging.conf  metadata.py  tracer.py  version.py
auth-api/tests/: conftest.py
auth-api/tests/docker/: docker-cmpose-mac.yml  docker-compose.yml  nginx.conf
auth-api/tests/mock/: Auth-API-1.0.0.yaml
build-deps/: pyproject.toml
integration-tests/: .gitignore  MANIFEST.in  Makefile  analysis_test_results.py  logging.conf  requirements.txt  setup.cfg  setup.py
integration-tests/requirements/: dev.txt  prod.txt
integration-tests/tests/: conftest.py  pylenium.json
jobs/notebook-report/: Dockerfile  Makefile  README.md  config.py  notebookreport.py  pyproject.toml  requirements.txt  run.sh  setup.py  vaults.json
notify-api/: Dockerfile  MANIFEST.in  Makefile  README.md  config.py  gunicorn_conf.py  logging.conf  main.py  manage.py  pre_hook_create_database.py  prestart.sh  requirements.txt  setup.cfg  setup.py  t1.txt  t2.txt  tsecret.txt  wsgi.py
notify-api/.devcontainer/: devcontainer.json  docker-compose.yml
notify-api/devops/: vaults.json
notify-api/docs/: dotenv_template
notify-api/jenkins/: dev.groovy  prod.groovy  test.groovy
notify-api/migrations/: README  env.py
notify-api/requirements/: dev.txt  prod.txt  repo-libraries.txt
notify-api/tests/: __init__.py  conftest.py
queue_services/account-mailer/: Dockerfile  Makefile  README.md  __init__.py  app.py  gunicorn_config.py  logging.conf  pyproject.toml  q_cli.py  requirements.txt  setup.cfg  setup.py
queue_services/auth-queue/: Dockerfile  Makefile  README.md  __init__.py  app.py  gunicorn_config.py  lint  pyproject.toml  requirements.txt  setup.cfg  setup.py
(+2113 files in other folders)
