[tool.poetry]
name = "auth-api"
version = "0.1.0"
description = ""
authors = ["\"BC Registries and Online Services\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask-caching = "2.3.0"
flask-cors = "3.0.10"
flask-mail = "0.10.0"
flask-migrate = "<3"
flask-moment = "1.0.5"
flask-sqlalchemy = "2.5.1"
flask-script = "2.0.6"
flask = "1.1.4"
jinja2 = "2.11.3"
mako = "1.3.5"
markupsafe = "2.0.1"
sqlalchemy-continuum = "1.3.15"
sqlalchemy-utils = "0.41.2"
sqlalchemy = "<1.4"
werkzeug = "<2"
aiohttp = "3.10.2"
aiosignal = "1.3.1"
alembic = "1.13.1"
argon2-cffi-bindings = "21.2.0"
argon2-cffi = "23.1.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
bcrypt = "4.1.3"
blinker = "1.8.2"
cachelib = "0.9.0"
cattrs = "23.2.3"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "7.1.2"
ecdsa = "0.19.0"
exceptiongroup = "1.2.1"
expiringdict = "1.2.2"
flask-jwt-oidc = "0.3.0"
flask-marshmallow = "0.11.0"
frozenlist = "1.4.1"
gunicorn = "22.0.0"
idna = "3.7"
importlib-metadata = "7.1.0"
importlib-resources = "6.4.0"
itsdangerous = "1.1.0"
jaeger-client = "4.8.0"
jsonschema = "4.17.3"
launchdarkly-server-sdk = "8.2.1"
marshmallow-sqlalchemy = "0.25.0"
marshmallow = "3.21.2"
minio = "7.2.7"
multidict = "6.0.5"
opentracing = "2.4.0"
orjson = "3.10.3"
packaging = "24.0"
pkgutil-resolve-name = "1.3.10"
protobuf = ">=3.19.5,<3.20.0"
psycopg2-binary = "2.9.9"
pyrfc3339 = "1.1"
pyasn1 = "0.6.0"
pycparser = "2.22"
pycryptodome = "3.20.0"
pyhumps = "3.8.0"
pyrsistent = "0.20.0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-memcached = "1.62"
pytz = "2024.1"
redis = "5.0.4"
requests = "2.32.2"
rsa = "4.9"
semver = "3.0.2"
sentry-sdk = {extras = ["flask"], version = "^2.10.0"}
six = "1.16.0"
threadloop = "1.0.2"
thrift = "0.20.0"
tornado = "6.4.1"
typing-extensions = "4.12.0"
urllib3 = "2.2.2"
yarl = "1.9.4"
zipp = "3.19.1"

# VCS dependencies
sbc-common-components = {git = "https://github.com/bcgov/sbc-common-components.git", rev = "master", subdirectory = "python"}
gcp-queue = {git = "https://github.com/seeker25/sbc-connect-common.git", branch = "small_tweaks", subdirectory = "python/gcp-queue"}
simple-cloudevent = {git = "https://github.com/daxiom/simple-cloudevent.py.git"}

[tool.poetry.group.dev.dependencies]
pylint = "3.2.3"
coverage = "^5.5"
pylint-flask = "^0.6.0"
pytest = "8.1.1"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.5.1"
requests = "^2.25.1"
flake8 = "5.0.4"
flake8-blind-except = "^0.1.1"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
flake8-quotes = "^3.3.0"
pep8-naming = "^0.11.1"
autopep8 = "^1.5.6"
pydocstyle = "^5.1.1"
freezegun = "^1.1.0"
faker = "^8.1.1"
pytest-asyncio = "0.21.0"
mock = "^4.0.3"
lovely-pytest-docker = "^0.3.1"
astroid = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
