[metadata]
name = auth_integration_testing
url = https://github.com/bcgov/sbc-auth
author = Relationships Team
author_email =
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Authentication
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.8
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.7
include_package_data = True
packages = find:

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = I001, I003, I004, E126, W504
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    u,
    rv,
    logger,
    id

[pylint]
ignore=migrations,test
max_line_length=120
notes=FIXME,XXX,TODO
ignored-modules=flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
generated-members=Error # allows dynamically generated member references
min-similarity-lines=15

[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::UserWarning
python_files=test_*.py
python_classes=Test*
python_functions=test_*
#log_cli=true
log_cli_level=INFO
