[metadata]
name = notify-api
url = https://github.com/bcgov/sbc-auth
author = Relationships Team
author_email =
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Notify
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
notify_api =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src
ignored-modules=sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    u,
    rv,
    logger,

[pylint]
ignore=migrations,test
max_line_length=120
notes=FIXME,XXX,TODO
ignored-modules=sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
generated-members=Error # allows dynamically generated member references
min-similarity-lines=15

[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2

[tool:pytest]
minversion = 2.0
testpaths = tests
addopts = --verbosity=0
    --strict
    -p no:warnings
    --cov=src --cov-report xml --cov-report term
    --junitxml=pytest.xml
python_files = tests/*/test*.py
norecursedirs = .git .tox venv* requirements* build
log_cli = true
log_cli_level = 1
filterwarnings =
    ignore::UserWarning
markers =
    slow
    serial

[coverage:run]
branch = True
source =
    src
omit =


[report:run]
exclude_lines =
    pragma: no cover
    from
    import
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
