[metadata]
name = notify-api
url = https://github.com/bcgov/sbc-auth
author = Relationships Team
author_email =
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Notify
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.7
include_package_data = True
packages = find:

[options.package_data]
notify_api =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = I001, I003, I004, E126, W504, N811, N812, D401
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src
ignored-modules=sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    u,
    rv,
    logger,

[pylint]
ignore=migrations,test
max_line_length=120
notes=FIXME,XXX,TODO
ignored-modules=sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session, Faker, Generator
generated-members=Error # allows dynamically generated member references
min-similarity-lines=15
extension-pkg-whitelist=pydantic
disable=C0301,W0511,W0707

[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2

[tool:pytest]
addopts = --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml
testpaths = tests/unit
filterwarnings =
    ignore::UserWarning

