[tool.poetry]
name = "auth-queue"
version = "1.1.0"
description = ""
authors = ["\"BC Registries and Online Services\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.8.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
expiringdict = "1.2.2"
google-api-core = "1.34.1"
google-auth = "2.28.2"
googleapis-common-protos = "1.63.0"
grpc-google-iam-v1 = "0.13.0"
grpcio = "1.64.0"
grpcio-status = "1.48.2"
idna = "3.7"
importlib-resources = "5.13.0"
jaeger-client = "4.8.0"
msgpack = "1.0.8"
opentracing = "2.4.0"
pkgutil_resolve_name = "1.3.10"
proto-plus = "1.23.0"
protobuf = "3.19.6"
pyRFC3339 = "1.1"
pyasn1 = "0.6.0"
pyasn1_modules = "0.4.0"
pycountry = "23.12.11"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
rsa = "4.9"
semver = "3.0.2"
six = "1.16.0"
threadloop = "1.0.2"
thrift = "0.20.0"
tornado = "6.4.1"
urllib3 = "2.2.2"
zipp = "3.19.1"


# VCS dependencies
auth-api = { git = "https://github.com/bcgov/sbc-auth.git", rev = "feature-gcp-migration", subdirectory = "auth-api" }
simple-cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py.git" }
build-deps = { git = "https://github.com/bcgov/sbc-auth.git", rev = "feature-gcp-migration", subdirectory = "build-deps" }

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"
pylint = "3.2.3"
coverage = "^5.5"
pylint-flask = "^0.6.0"
pytest = "8.1.1"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.5.1"
requests = "^2.25.1"
flake8 = "5.0.4"
flake8-blind-except = "^0.1.1"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
flake8-quotes = "^3.3.0"
pep8-naming = "^0.11.1"
autopep8 = "^1.5.6"
pydocstyle = "^5.1.1"
freezegun = "^1.1.0"
faker = "^8.1.1"
pytest-asyncio = "0.21.0"
mock = "^4.0.3"
lovely-pytest-docker = "^0.3.1"
astroid = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
