[project]
name = "auth-queue"
version = "1.1.0"
description = ""
authors = [{ name = "BC Registries and Online Services" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.poetry]
packages = [
    { include = "auth_queue", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
blinker = "1.8.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
expiringdict = "1.2.2"
idna = "3.7"
importlib-resources = "5.13.0"
jaeger-client = "4.8.0"
msgpack = "1.0.8"
opentracing = "2.4.0"
pkgutil_resolve_name = "1.3.10"
pyRFC3339 = "1.1"
pyasn1 = "0.6.0"
pyasn1_modules = "0.4.0"
pycountry = "23.12.11"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
rsa = "4.9"
semver = "3.0.2"
six = "1.16.0"
threadloop = "1.0.2"
thrift = "0.20.0"
zipp = "3.19.1"


# VCS dependencies
auth-api = { git = "https://github.com/seeker25/sbc-auth.git", branch = "32356", subdirectory = "auth-api" }
simple-cloudevent = { git = "https://github.com/daxiom/simple-cloudevent.py.git" }
cloud-sql-python-connector = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pylint = "3.2.3"
coverage = "^5.5"
pylint-flask = "^0.6.0"
pytest = "8.1.1"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.5.1"
requests = "^2.25.1"
freezegun = "^1.1.0"
faker = "^8.1.1"
pytest-asyncio = "0.21.0"
mock = "^4.0.3"
lovely-pytest-docker = "^1.0.0"
astroid = "^3.2.3"
flake8-pyproject = "^1.2.3"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "2.0"
testpaths = [
   "tests",
]
addopts = "--verbose --strict -p no:warnings --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml"
python_files = [
   "test*.py"
]
norecursedirs = [
   ".git", ".tox", "venv*", "requirements*", "build",
]
log_cli = true
log_cli_level = "1"
filterwarnings = [
   "ignore::UserWarning"
]
markers = [
   "slow",
   "serial",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "devops",
    ".history",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = [
    "E4",      # pycodestyle errors
    "E7",      # pycodestyle errors  
    "E9",      # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "ARG",     # unused-function-argument
    "D",       # pydocstyle
    "I",       # isort
    "N",       # pep8-naming
    "Q",       # flake8-quotes
    "S",       # flake8-bandit
    "T",       # flake8-type-checking
    "TCH",     # flake8-type-checking
    "TID",     # flake8-tidy-imports
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*.py" = ["PLR2004", "S101", "TID252", "ARG001", "B006", "B008", "S311", "T201"]
# Allow magic values in tests
"**/test_*.py" = ["PLR2004", "S101", "TID252", "ARG001", "B006", "B008", "S311", "T201"]
# Allow magic values in conftest.py
"conftest.py" = ["PLR2004", "S101", "TID252", "ARG001", "B006", "B008", "S311", "T201"]
# Allow magic values in migrations
"migrations/**/*.py" = ["PLR2004", "S101", "TID252"]
# Allow magic values in devops
"devops/**/*.py" = ["PLR2004", "S101", "TID252"]
# Allow unused imports in __init__.py and ignore N999 (invalid module name)
"__init__.py" = ["F401", "N999"]

[tool.ruff.lint.isort]
known-first-party = ["pay_api"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"
